Allow configurable CORS origins via environment variable